experimental/report/testdata/single-line.yaml.fancy.txt
remark: "proto4" isn't real, it can't hurt you
  --> foo.proto:1:10
   |
 1 | syntax = "proto4"
   |          ^^^^^^^^^ help: change this to "proto5"

error: missing `;`
  --> foo.proto:1:18
   |
 1 | syntax = "proto4"
   |                  ^ here

remark: EOF
  --> foo.proto:7:2
   |
 7 | }
   |  ^ here

error: package
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^^^^^^^        - semicolon
   |  |
   |  package

error: package
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^^^^^^^
   |  |
   |  unreasonably long error message that needs to wrap for it to look good

error: this is an overlapping error
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ---------------- package decl
   | ^^^^^^^ package

error: P A C K A G E
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^ -- -- help: ge
   | | |
   | help: p
   |   |
   |   help: ck

error: P A C K A G E
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^ -- ----------- decl
   | | |   |
   | help: p
   |   |   |
   |   help: ck
   |       |
   |       help: ge

error: P A C K A G E (different order)
  --> foo.proto:3:3
   |
 3 | package abc.xyz;
   | - ^^ -- help: ge
   | | |
   | help: p
   |   |
   |   help: ck

error: P A C K A G E (single letters)
  --> foo.proto:3:1
   |
 3 | package abc.xyz;
   | ^ -- -- g
   | | |
   | p k

encountered 8 errors
